# m3Diff

./: .gitattributes  .gitignore  CLAUDE.md  DECISIONS.md  LICENSE  METADATA-PUBLISHER-NOTES.md  PLAN.md  PROGRESS.md  README.md  SPEC-m3diff.md
desktop/: README.md  index.html  package-lock.json  package.json
desktop/src/: App.tsx  rpc.ts  styles.css  types.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: lib.rs
desktop/src/views/: Drilldown.tsx  Results.tsx  Scope.tsx  Settings.tsx  Upload.tsx
engine/: README.md  pyproject.toml
engine/packaging/: entry.py
engine/src/m3diff/: __init__.py  classify.py  cli.py  cono.py  contract.py  diff.py  log.py  pk.py  report.py  rpc.py  source.py
engine/src/m3diff/format/: __init__.py  reader.py  tableinfo.py  types.py
engine/src/m3diff/schema/: __init__.py  cache.py  ionapi.py  models.py  publisher.py
engine/tests/: conftest.py  test_classify.py  test_cli.py  test_diff.py  test_ionapi.py  test_log.py  test_parallel.py  test_pk.py  test_publisher.py  test_reader.py  test_report.py  test_roundtrip.py  test_rpc.py  test_schema_cache.py  test_source.py  test_tableinfo.py
engine/tests/fixtures/: builder.py
reference/: classify_export.py  parse_export.py  parse_tableinfo.py
scripts/: build-sidecar.ps1
